correciones para la entrega; agregue electronica en todas las paginas, los buttons, links, margins, entre otras cosas

--- a/cart.html
+++ b/cart.html
@@ -21,6 +21,7 @@
             <nav>
                 <ul class="lista">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="category.html">Electronica</a></li>
                     <li><a href="category.html">Accesorios</a></li>
                     <li><a href="category.html">Ropa Hombre</a></li>
                     <li><a href="category.html">Ropa Mujer</a></li>
@@ -36,7 +37,7 @@
 
 
 
-    <h1 class="h2">Shopping Cart</h1>
+    <h1 class="category">Shopping Cart</h1>
 
 
     <section class="articulos-padre">
