--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <nav>
             <ul class="lista">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="category.html">Electronica</a></li>
                 <li><a href="category.html">Accesorios</a></li>
                 <li><a href="category.html">Ropa Hombre</a></li>
                 <li><a href="category.html">Ropa Mujer</a></li>
@@ -31,7 +32,7 @@
 
     </header>
 
-    <h2 class="h2">Ropa de Mujer</h2>
+    <h2 class="category">Ropa de Mujer</h2>
     <main>
         <section class="articulos-padre">
             
@@ -42,7 +43,7 @@
                     <p>Buzo bakery shop</p>
                     <h3>$100.000</h3>
                     <a href="./cart.html" class="button"> Agregar al Carrito</a><br>
-                    <a href="./producto.html" class="button"> Ver mas</a>
+                    <a href="./producto.html" class="button-ver"> Ver mas</a>
                 </article>
 
 
@@ -86,7 +87,7 @@
                 </article>
 
                 <section class="articulos-padre">
-                    <h2 class="h2">Ropa de Hombre</h2>
+                    <h2 class="category">Ropa de Hombre</h2>
                     <section class="home-sections">
                         <article class="producto">
                             <h3>Camisa</h3>
@@ -139,7 +140,7 @@
 
 
                         <section class="articulos-padre">
-                            <h2 class="h2">Accesorios</h2>
+                            <h2 class="category">Accesorios</h2>
                             <section class="home-sections">
                                 <article class="producto">
                                     <h3>Gorra</h3>
