--- a/login.html
+++ b/login.html
@@ -11,47 +11,50 @@
 
 
 <body>
-    <div>
-        <header class="header">
-            <img src="./img/logo.png" alt="logo" class="logo"></a>
+
+    <header class="header">
+        <img src="./img/logo.png" alt="logo" class="logo"></a>
 
 
-            <nav>
-                <ul class="lista">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="category.html">Accesorios</a></li>
-                    <li><a href="category.html">Ropa Hombre</a></li>
-                    <li><a href="category.html">Ropa Mujer</a></li>
-                    <li><a href="cart.html">Carrito</a></li>
-                    <li><a href="login.html">Log In</a></li>
-                    <li><a href="register.html">Registro</a></li>
-                </ul>
-            </nav>
+        <nav>
+            <ul class="lista">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="category.html">Electronica</a></li>
+                <li><a href="category.html">Accesorios</a></li>
+                <li><a href="category.html">Ropa Hombre</a></li>
+                <li><a href="category.html">Ropa Mujer</a></li>
+                <li><a href="cart.html">Carrito</a></li>
+                <li><a href="login.html">Log In</a></li>
+                <li><a href="register.html">Registro</a></li>
+            </ul>
+        </nav>
 
-
-        </header>
-    </div>
+    
+    </header>
 
     <href class="login">
         <h1>log in</h1>
         <form action="" method="">
+        
             <div>
                 <label>direccion de correo electronico:</label>
                 <input type="email" name="emailUsuario" placeholder="ej.prograti@gmail.com" required class="email">
             </div>
-            <label>contraseña:</label>
-            <input type="password" name="passwordUsuario" required>
+            <div>
+                <label>contraseña:</label>
+                <input type="password" name="passwordUsuario" required>
+            </div>
             <div>
                 <button type="submit" class="ingresar">ingresar</button>
             </div>
             <div>
-                <button type="button"><a href="register.html">no tengo cuenta</a></button>
+                <a href="register.html" class="link">no tengo cuenta</a>
             </div>
             <div>
-                <button type="button"><a href="recover.html">recuperar contraseña</a></button>
+                <a href="recover.html" class="link">recuperar contraseña</a>
             </div>
+        </form>
     </href>
-    </form>
 
     <footer>
         <nav class="footer">
@@ -63,6 +66,7 @@
     </footer>
 
 
-</html>
+
+</body>
 
 </html>
