--- a/producto.html
+++ b/producto.html
@@ -19,6 +19,7 @@
             <nav>
                 <ul class="lista">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="category.html">Electronica</a></li>
                     <li><a href="category.html">Accesorios</a></li>
                     <li><a href="category.html">Ropa Hombre</a></li>
                     <li><a href="category.html">Ropa Mujer</a></li>
@@ -35,18 +36,13 @@
     <main>
 
         <section class="contenedor-producto1">
-
+            <h2 class="buzo-bakery">buzo bakery shop</h2>
             <img src="./img/buzo-mujer-final.png" class="buzo-detail">
             <img src="./img/buzo-mujer-final-dos.png" class="buzo-detail">
-
-            <div class="contendor-producto2">
-                <h3 class="buzo-bakery">buzo bakery shop</h3>
                 <p class="buzo-bakery">buzo de tela importada de italia</p>
                 <p class="buzo-bakery">talle unico</p>
                 <h3 class="buzo-bakery">precio: $100.000</h3>
-
-            </div>
-
+                <a href="cart.html" class="button" class="add-cart">Agregar al carrito</a>
         </section>
 
     </main>
