--- a/recover.html
+++ b/recover.html
@@ -19,6 +19,7 @@
             <nav>
                 <ul class="lista">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="category.html">Electronica</a></li>
                     <li><a href="category.html">Accesorios</a></li>
                     <li><a href="category.html">Ropa Hombre</a></li>
                     <li><a href="category.html">Ropa Mujer</a></li>
@@ -66,5 +67,7 @@
         </footer>
 
     </div>
+
+</body>
 
 </html>
