--- a/register.html
+++ b/register.html
@@ -19,6 +19,7 @@
             <nav>
                 <ul class="lista">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="category.html">Electronica</a></li>
                     <li><a href="category.html">Accesorios</a></li>
                     <li><a href="category.html">Ropa Hombre</a></li>
                     <li><a href="category.html">Ropa Mujer</a></li>
@@ -52,11 +53,9 @@
                 <button type="submit" class="ingresar">registrarme</button>
             </div>
             <div>
-                <button type="button"><a href="login.html">ya tengo cuenta</a></button>
+                <a href="login.html" class="link">ya tengo una cuenta</a>
             </div>
     </href>
-</body>
-
 
 <div>
     <footer>
@@ -69,5 +68,9 @@
     </footer>
 
 </div>
+
+
+
+</body>
 
 </html>
