--- a/category.html
+++ b/category.html
@@ -19,6 +19,7 @@
             <nav>
                 <ul class="lista">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="category.html">Electronica</a></li>
                     <li><a href="category.html">Accesorios</a></li>
                     <li><a href="category.html">Ropa Hombre</a></li>
                     <li><a href="category.html">Ropa Mujer</a></li>
@@ -35,11 +36,11 @@
     <main>
 
         <h2 class="category">Categorias</h2>
-        <h2 class="h2"> Ropa de mujer</h2>
+        <h2 class="category"> Ropa de mujer</h2>
         <section class="category-mujer">
             <article class="producto">
                 <h3 class="titulo-producto">Buzo</h3>
-                <a href="./productDetail.html"><img src="./img/buzo-mujer-final.png" alt="Buzo de mujer"></a>
+                <a href="./producto.html"><img src="./img/buzo-mujer-final.png" alt="Buzo de mujer"></a>
                 <p>Buzo bakery shop</p>
                 <h3>$100.000</h3>
             </article>
@@ -48,7 +49,7 @@
 
             <article class="producto">
                 <h3 class="titulo-producto">Pollera</h3>
-                <a href="./productDetail.html"><img src="./img/pollera-mujer.jpeg" alt="Pollera de mujer"></a>
+                <a href="./producto.html"><img src="./img/pollera-mujer.jpeg" alt="Pollera de mujer"></a>
                 <p>Pollera de mujer super comoda</p>
                 <h3>$1111</h3>
             </article>
@@ -57,7 +58,7 @@
 
             <article class="producto">
                 <h3 class="titulo-producto">Pantalon</h3>
-                <a href="./productDetail.html"><img src="./img/pant-mujer.jpeg" alt="Pantalon de mujer"></a>
+                <a href="./producto.html"><img src="./img/pant-mujer.jpeg" alt="Pantalon de mujer"></a>
                 <p>Pantalon para mujer super canchero</p>
                 <h3>$1200</h3>
             </article>
@@ -66,7 +67,7 @@
 
             <article class="producto">
                 <h3 class="titulo-producto"> Sandalias </h3>
-                <a href="./productDetail.html"><img src="./img/sandalias-mujer.jpeg" alt="Sandalias de mujer"></a>
+                <a href="./producto.html"><img src="./img/sandalias-mujer.jpeg" alt="Sandalias de mujer"></a>
                 <p>Sandalias para mujer</p>
                 <h3>$1300</h3>
             </article>
@@ -74,7 +75,7 @@
 
             <article class="producto">
                 <h3 class="titulo-producto">Top</h3>
-                <a href="./productDetail.html"><img src="./img/top-mujer.jpeg" alt="Top de mujer"></a>
+                <a href="./producto.html"><img src="./img/top-mujer.jpeg" alt="Top de mujer"></a>
                 <p>Top mangas largas para mujer</p>
                 <h3>$1400</h3>
             </article>
