modificaciones de carrito

--- a/cart.html
+++ b/cart.html
@@ -84,9 +84,7 @@
 
 
 
-            <a href="">
-                <button class="comprar-button" type="submit">Comprar</button>
-            </a>
+            <a class="comprar-button">Comprar</a>
 
         </div>
 
