modificaciones esteticas del css

--- a/cart.html
+++ b/cart.html
@@ -79,7 +79,7 @@
     <div class="compra-final">
 
         <div class="precio-total">
-            <p>Total: $4090</p>
+            <h4>Total: $4090</h4>
 
 
 
