estructura+index.js+ category

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <section class="home-sections">
                 <article class="producto">
                     <h3>Buzo</h3>
-                    <img src="./img/buzo-mujer-final.png" alt="Buzo de mujer">
+                    <img src="" alt="Buzo de mujer">
                     <p>Buzo bakery shop</p>
                     <h3>$100.000</h3>
-                    <a href="./cart.html" class="button"> Agregar al Carrito</a><br>
+                    <a class="button"> Agregar al Carrito</a><br>
                     <a href="./producto.html" class="button-ver"> Ver mas</a>
                 </article>
 
@@ -53,7 +53,7 @@
                     <img src="./img/pollera-mujer.jpeg" alt="Pollera de mujer">
                     <p>Pollera de mujer super comoda</p>
                     <h3>$1111</h3>
-                    <a href="./cart.html" class="button"> Agregar al carrito</a><br>
+                    <a  class="button"> Agregar al carrito</a><br>
                     <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
@@ -63,7 +63,7 @@
                     <img src="./img/pant-mujer.jpeg" alt="Pantalon de mujer">
                     <p>Pantalon para mujer super canchero</p>
                     <h3>$1200</h3>
-                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                    <a class="button">Agregar al carrito</a><br>
                     <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
@@ -73,7 +73,7 @@
                     <img src="./img/sandalias-mujer.jpeg" alt="Sandalias de mujer">
                     <p>Sandalias para mujer</p>
                     <h3>$1300</h3>
-                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                    <a  class="button">Agregar al carrito</a><br>
                     <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
@@ -82,7 +82,7 @@
                     <img src="./img/top-mujer.jpeg" alt="Top de mujer">
                     <p>Top mangas largas para mujer</p>
                     <h3>$1400</h3>
-                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                    <a  class="button">Agregar al carrito</a><br>
                     <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
@@ -139,59 +139,52 @@
         <section class="articulos-padre">
         <h2 class="category">Accesorios</h2>
 
-            <section class="home-sections">
+            <section class="home-sections-accesorios">
                 <article class="producto">
-                    <h3>Gorra</h3>
-                    <img src="./img/gorra.jpeg" alt="gorra">
-                    <p>Gorra unisex</p>
-                    <h3>$799</h3>
-                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                    <h3></h3>
+                    <img src="">
+                    <p></p>
+                    <h3></h3>
+                    <a class="button">Agregar al carrito</a><br>
                     <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
                 <article class="producto">
                     <h3>Reloj</h3>
-                    <img src="./img/reloj.jpeg" alt="reloj">
+                    <img src="">
                     <p>Reloj con malla color negra</p>
                     <h3>$2000</h3>
-                    <a href="./cart.html" class="button">Agregar al carrito </a><br>
+                    <a class="button">Agregar al carrito </a><br>
                     <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
                 <article class="producto">
                     <h3>Cartera</h3>
-                    <img src="./img/accesorio-cartera.jpeg" alt="Cartera de mujer">
+                    <img src="">
                     <p> Cartera de cuero para mujer</p>
                     <h3>$989</h3>
-                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                    <a class="button">Agregar al carrito</a><br>
                     <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
                 <article class="producto">
                     <h3>Pulsera</h3>
-                    <img src="./img/pulsera-accesorio.jpeg" alt="pulsera">
+                    <img src="" >
                     <p>Pulsera de cuero con dije</p>
                     <h3>$780</h3>
-                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                    <a class="button">Agregar al carrito</a><br>
                     <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
 
 
                 <article class="producto">
                     <h3>Anteojos</h3>
-                    <img src="./img/anteojos-accesorios.jpeg" alt="anteojos">
+                    <img src="" >
                     <p>Anteojos de forma rectangular con patitas reforzadas</p>
                     <h3>$659</h3>
-                    <a href="./cart.html" class="button">Agregar al carrito</a><br>
+                    <a  class="button">Agregar al carrito</a><br>
                     <a href="./producto.html" class="button-ver">Ver mas</a>
                 </article>
-
-
-
-
-
-
-
         </section>
     </main>
 
@@ -205,7 +198,7 @@
     </footer>
 
 
-
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
