--- a/producto.html
+++ b/producto.html
@@ -37,8 +37,8 @@
 
         <section class="contenedor-producto1">
             <h2 class="buzo-bakery">buzo bakery shop</h2>
-            <img src="./img/buzo-mujer-final.png" class="buzo-detail">
-            <img src="./img/buzo-mujer-final-dos.png" class="buzo-detail">
+            <img src="" class="buzo-detail">
+            <img src="" class="buzo-detail">
                 <p class="buzo-bakery">buzo de tela importada de italia</p>
                 <p class="buzo-bakery">talle unico</p>
                 <h3 class="buzo-bakery">precio: $100.000</h3>
@@ -58,3 +58,6 @@
         </footer>
 
     </div>
+
+<script src="/js/producto.js"></script>
+</body>
