--- a/index.html
+++ b/index.html
@@ -136,56 +136,13 @@
                 </article>
 
 
-        <section class="articulos-padre">
-        <h2 class="category">Accesorios</h2>
-
-            <section class="home-sections-accesorios">
-                <article class="producto">
-                    <h3></h3>
-                    <img src="">
-                    <p></p>
-                    <h3></h3>
-                    <a class="button">Agregar al carrito</a><br>
-                    <a href="./producto.html" class="button-ver">Ver mas</a>
-                </article>
-
-                <article class="producto">
-                    <h3>Reloj</h3>
-                    <img src="">
-                    <p>Reloj con malla color negra</p>
-                    <h3>$2000</h3>
-                    <a class="button">Agregar al carrito </a><br>
-                    <a href="./producto.html" class="button-ver">Ver mas</a>
-                </article>
-
-                <article class="producto">
-                    <h3>Cartera</h3>
-                    <img src="">
-                    <p> Cartera de cuero para mujer</p>
-                    <h3>$989</h3>
-                    <a class="button">Agregar al carrito</a><br>
-                    <a href="./producto.html" class="button-ver">Ver mas</a>
-                </article>
-
-                <article class="producto">
-                    <h3>Pulsera</h3>
-                    <img src="" >
-                    <p>Pulsera de cuero con dije</p>
-                    <h3>$780</h3>
-                    <a class="button">Agregar al carrito</a><br>
-                    <a href="./producto.html" class="button-ver">Ver mas</a>
-                </article>
-
-
-                <article class="producto">
-                    <h3>Anteojos</h3>
-                    <img src="" >
-                    <p>Anteojos de forma rectangular con patitas reforzadas</p>
-                    <h3>$659</h3>
-                    <a  class="button">Agregar al carrito</a><br>
-                    <a href="./producto.html" class="button-ver">Ver mas</a>
-                </article>
-        </section>
+                <section class="articulos-padre">
+                    <h2 class="category">Accesorios</h2>
+                    <div class="home-sections-jewelery">
+                        
+                    </div>
+            
+                </section>
     </main>
 
     <footer>
@@ -198,7 +155,7 @@
     </footer>
 
 
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
