--- a/recover.html
+++ b/recover.html
@@ -67,7 +67,7 @@
         </footer>
 
     </div>
-    <script src="/js/recover.js"></script>
+    <script src="./js/recover.js"></script>
 
 </body>
 
