formulario log in

--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
             </div>
             <div>
                 <label>contraseña:</label>
-                <input type="password" name="passwordUsuario" required>
+                <input type="password" name="passwordUsuario" required class="contrasenia">
             </div>
             <div>
                 <button type="submit" class="ingresar">ingresar</button>
