--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
         <nav>
             <ul class="lista">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="category.html">Electronica</a></li>
-                <li><a href="category.html">Accesorios</a></li>
-                <li><a href="category.html">Ropa Hombre</a></li>
-                <li><a href="category.html">Ropa Mujer</a></li>
+                <li><a href="category.html?id=electronic">Electronica</a></li>
+                <li><a href="category.html?id=jewelery">Accesorios</a></li>
+                <li><a href="category.html?id=men's%20clothing">Ropa Hombre</a></li>
+                <li><a href="category.html?id=women's%20clothing">Ropa Mujer</a></li>
                 <li><a href="cart.html">Carrito</a></li>
                 <li><a href="login.html">Log In</a></li>
                 <li><a href="register.html">Registro</a></li>
             </ul>
         </nav>
+
 
 
     </header>
@@ -141,7 +142,6 @@
                     <div class="home-sections-jewelery">
                         
                     </div>
-            
                 </section>
     </main>
 
