--- a/category.html
+++ b/category.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul class="lista">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="category.html?id=electronic">Electronica</a></li>
+                    <li><a href="category.html?id=electronics">Electronica</a></li>
                     <li><a href="category.html?id=jewelery">Accesorios</a></li>
                     <li><a href="category.html?id=men's%20clothing">Ropa Hombre</a></li>
                     <li><a href="category.html?id=women's%20clothing">Ropa Mujer</a></li>
@@ -35,7 +35,7 @@
 
     <main>
         <section class="articulos-padre">
-            <h2 class="category-title">Electronica</h2>
+            <h2 class="category-title"></h2>
             <div class="category">
                 
             </div>
