--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul class="lista">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="category.html?id=electronic">Electronica</a></li>
+                <li><a href="category.html?id=electronics">Electronica</a></li>
                 <li><a href="category.html?id=jewelery">Accesorios</a></li>
                 <li><a href="category.html?id=men's%20clothing">Ropa Hombre</a></li>
                 <li><a href="category.html?id=women's%20clothing">Ropa Mujer</a></li>
