login, registro y correcciones.Todo finalizado

--- a/login.html
+++ b/login.html
@@ -32,8 +32,8 @@
     
     </header>
 
-    <href class="login">
-        <h1>log in</h1>
+    <div class="login">
+        <h1>Log in</h1>
         <form action="" method="">
         
             <div>
@@ -54,7 +54,7 @@
                 <a href="recover.html" class="link">recuperar contraseña</a>
             </div>
         </form>
-    </href>
+    </div>
 
     <footer>
         <nav class="footer">
