--- a/register.html
+++ b/register.html
@@ -41,11 +41,14 @@
             <div>
                 <label>direccion de correo electronico:</label>
                 <input type="email" name="emailUsuario" placeholder="ej.prograti@gmail.com" required class="email">
+                <p class="emailError"></p>
             </div>
             <label>contraseña:</label>
-            <input type="password" name="passwordUsuario" required><br>
+            <input type="password" name="passwordUsuario" required  class="contrasenia"><br>
+            <p class="contraError"></p>
             <label>repetir contraseña:</label>
-            <input type="password" name="passwordUsuario" required><br>
+            <input type="password" name="passwordUsuario" required  class="repetirContra"><br>
+            <p class="repetirContraError"></p>
 
             <input type="checkbox" name="terminosycondiciones">
             <label for="checkbox">terminos y condiciones</label>
