parte de detalle de producto

--- a/producto.html
+++ b/producto.html
@@ -37,12 +37,10 @@
     <main>
 
         <section class="contenedor-producto1">
-            <h2 class="buzo-bakery">buzo bakery shop</h2>
-            <img src="" class="buzo-detail">
-            <img src="" class="buzo-detail">
-                <p class="buzo-bakery">buzo de tela importada de italia</p>
-                <p class="buzo-bakery">talle unico</p>
-                <h3 class="buzo-bakery">precio: $100.000</h3>
+            <h2 id="producto-nombre" class="buzo-bakery">nombre:</h2>
+            <img class="producto-imagen" src="" class="buzo-detail">
+                <p id="producto-descripcion" class="buzo-bakery">descripcion:</p>
+                <h3 id="producto-precio" class="buzo-bakery">precio:</h3>
                 <a href="cart.html" class="button" class="add-cart">Agregar al carrito</a>
         </section>
 
