--- a/producto.html
+++ b/producto.html
@@ -37,10 +37,10 @@
     <main>
 
         <section class="contenedor-producto1">
-            <h2 id="producto-nombre" class="buzo-bakery">nombre:</h2>
-            <img class="producto-imagen" src="" class="buzo-detail">
-                <p id="producto-descripcion" class="buzo-bakery">descripcion:</p>
-                <h3 id="producto-precio" class="buzo-bakery">precio:</h3>
+            <h2 class="producto-nombre">nombre:</h2>
+            <img class="producto-imagen" src="" >
+                <p class="producto-descripcion">descripcion:</p>
+                <h3 class="producto-precio">precio:</h3>
                 <a href="cart.html" class="button" class="add-cart">Agregar al carrito</a>
         </section>
 
@@ -59,4 +59,5 @@
     </div>
 
 <script src="./js/producto.js"></script>
+<script src="./js/saludo.js"></script>
 </body>
