--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <li><a href="category.html?id=men's%20clothing">Ropa Hombre</a></li>
                 <li><a href="category.html?id=women's%20clothing">Ropa Mujer</a></li>
                 <li><a href="cart.html">Carrito</a></li>
-                <li><a href="login.html">Log In</a></li>
-                <li><a href="register.html">Registro</a></li>
+                <li id="login"><a href="login.html">Log In</a></li>
+                <li id="registro"><a href="register.html">Registro</a></li>
             </ul>
         </nav>
 
-
+        <span id="bienvenida"></span>
 
     </header>
 
