correccion de errores

--- a/category.html
+++ b/category.html
@@ -36,7 +36,7 @@
 
     <main>
         <section class="articulos-padre">
-            <h2 class="category-title"></h2>
+            <h2 class="category-title">Productos Similares</h2>
             <div class="category">
                 
             </div>
@@ -58,6 +58,7 @@
     
     <script src="./js/category.js"></script>
     <script src="./js/saludo.js"></script>
+    <script src="./js/logout.js"></script>
 </body>
 
 </html>
