--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
             </ul>
         </nav>
 
-        <span id="bienvenida"></span>
+       
 
     </header>
 
     <main>
+                <section class="articulos-padre">
+                    <span id="bienvenida"></span>
+                </section> 
+
                 <section class="articulos-padre">
                     <h2 class="category">Ropa de Mujer</h2>
                     <div class="home-sections-mujer">
