--- a/cart.html
+++ b/cart.html
@@ -46,7 +46,9 @@
     
     </div>
 
-    <p class="carrito-total"></p>
+    <div class="carrito-total">
+        <button id ="carrito-button">Finalizar Compra</button>
+    </div>
 
 
 
