arreglo de errores en index.js e index.html para que funcione bien la pagina de detalle de producto y ajustes de css

--- a/producto.html
+++ b/producto.html
@@ -37,11 +37,12 @@
     <main>
 
         <section class="contenedor-producto1">
-            <h2 class="producto-nombre">nombre:</h2>
+            <h2 class="producto-nombre"></h2>
             <img class="producto-imagen" src="" >
-                <p class="producto-descripcion">descripcion:</p>
-                <h3 class="producto-precio">precio:</h3>
-                <a href="cart.html" class="button" class="add-cart">Agregar al carrito</a>
+            <p class="producto-descripcion"></p>
+            <h3 class="producto-precio"></h3>
+            <p class="producto-categoria"></p>
+            <a href="cart.html" class="button" class="add-cart">Agregar al carrito</a>
         </section>
 
     </main>
@@ -61,3 +62,5 @@
 <script src="./js/producto.js"></script>
 <script src="./js/saludo.js"></script>
 </body>
+
+</html>
