--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
             </ul>
         </nav>
 
-       
+        <span id="bienvenida"></span>
 
     </header>
 
     <main>
-                <section class="articulos-padre">
-                    <span id="bienvenida"></span>
-                </section> 
-
                 <section class="articulos-padre">
                     <h2 class="category">Ropa de Mujer</h2>
                     <div class="home-sections-mujer">
@@ -76,6 +72,7 @@
 
 
     <script src="./js/index.js"></script>
+    <script src="./producto.html"></script>
     <script src="./js/saludo.js"></script>
 </body>
 
