--- a/login.html
+++ b/login.html
@@ -26,6 +26,7 @@
                 <li><a href="cart.html">Carrito</a></li>
                 <li id="login"><a href="login.html">Log In</a></li>
                 <li id="registro"><a href="register.html">Registro</a></li>
+                <li class="nav-item"><button id="logout-button" class="nav-link">Logout</button></li>
             </ul>
         </nav>
 
@@ -69,6 +70,7 @@
 
     <script src="./js/login.js"></script>
     <script src="./js/saludo.js"></script>
+    <script src="./js/logout.js"></script>
 
 </body>
 
