--- a/register.html
+++ b/register.html
@@ -26,6 +26,7 @@
                     <li><a href="cart.html">Carrito</a></li>
                     <li id="login"><a href="login.html">Log In</a></li>
                     <li id="registro"><a href="register.html">Registro</a></li>
+                    <li class="nav-item"><button id="logout-button" class="nav-link">Logout</button></li>
                 </ul>
             </nav>
 
@@ -75,6 +76,7 @@
 
 <script src="./js/register.js"></script>
 <script src="./js/saludo.js"></script>
+<script src="./js/logout.js"></script>
 
 </body>
 
