--- a/cart.html
+++ b/cart.html
@@ -65,6 +65,7 @@
     <script src="./js/cart.js"></script>
     <script src="./js/saludo.js"></script>
     <script src="./js/logout.js"></script>
+    <script src="./js/producto.js"></script>
 
 
 </body>
