--- a/producto.html
+++ b/producto.html
@@ -63,6 +63,7 @@
 <script src="./js/producto.js"></script>
 <script src="./js/saludo.js"></script>
 <script src="./js/logout.js"></script>
+<script src="./js/cart.js"></script>
 </body>
 
 </html>
